syntax = "proto3";

package pb;

option go_package = "broker/pb";

service Broker {
  rpc Publish (PublishRequest) returns (PublishResponse);
  rpc Subscribe(SubscribeRequest) returns (stream MessageResponse);
  rpc Fetch(FetchRequest) returns (MessageResponse);
}

message PublishRequest {
  string subject = 1;
  bytes body = 2;
  int64 expirationSeconds = 3;
}

message PublishResponse {
  int64 id = 1;
}

message SubscribeRequest {
  string subject = 1;
}

message MessageResponse {
  bytes body = 1;
}

message FetchRequest {
  string subject = 1;
  int64  id = 2;
}